--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>코로나 추적앱</title>
 </head>
 
 <body>
